# conversation-tool

./: .env.example  .gitignore  Dockerfile  GEMINI.md  PRIVACY.md  README.md  REVIEW_PROMPT.md  SYSTEM_INSTRUCTIONS.md  TERMS.md  card-designs-mockup.html  claude.md  dev.sh  env-vars.yaml  eslint.config.js  example.deploy.sh  google-support-letter.md  index.html  install.sh  lesson-content.json  package-lock.json  package.json  prompt-comparison.html  pyproject.toml  requirements-dev.txt  requirements.txt  update-lesson.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
public/audio-processors/: capture.worklet.js  playback.worklet.js
server/: ai_provider.py  config_utils.py  course_auth.py  fingerprint.py  gdpr_utils.py  gemini_live.py  main.py  qwen_live.py  recaptcha_validator.py  redis_storage.py  simple_tracker.py  teachable_auth.py  usage_tracker.py
src/: main.js  style.css
src/components/: app-root.js  audio-visualizer.js  live-transcript.js  text-cycler.js  view-chat.js  view-login.js  view-missions.js  view-splash.js  view-summary.js
src/data/: missions.json
src/lib/gemini-live/: geminilive.js  mediaUtils.js
tests/: test_api.py
